log
ju., 21 de abr. de 2022 15:43:14: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     tM -> root = lower_than;
                ^
treemap.c:43:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     tM -> current = lower_than;
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
b1fc42d
ju., 21 de abr. de 2022 15:44:23: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:15: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     int aux = lower_than;
               ^~~~~~~~~~
treemap.c:43:16: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     tM -> root = aux;
                ^
treemap.c:44:19: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     tM -> current = aux;
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
1948510
ju., 21 de abr. de 2022 15:57:29: 
 treemap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  3|8
total_score: 0/70
2392ba5
ju., 21 de abr. de 2022 16:02:09: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:44:24: error: 'lower_than_int' undeclared (first use in this function)
     tM -> lower_than = lower_than_int;
                        ^~~~~~~~~~~~~~
treemap.c:44:24: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8b5f5a2
ju., 21 de abr. de 2022 16:02:25: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
07e45d3
ju., 21 de abr. de 2022 16:03:03: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|8
total_score: 0/70
4cb28f3
ju., 21 de abr. de 2022 18:10:26: 
 treemap.c | 44 +++++++++++++++++++++++++++++---------------
 1 file changed, 29 insertions(+), 15 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:79:13: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     nodoAux = tree;
             ^
treemap.c:82:46: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         if(key == nodoAux->pair->key) return nodoAux;
                                              ^~~~~~~
treemap.c:91:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return nodoAux;
            ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fff3edd
ju., 21 de abr. de 2022 18:10:53: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:79:13: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     nodoAux = tree;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
7033241
ju., 21 de abr. de 2022 18:14:13: 
 treemap.c | 15 +++------------
 1 file changed, 3 insertions(+), 12 deletions(-)
 tests:  0|0
c636beb
ju., 21 de abr. de 2022 18:15:08: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:82:46: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         if(key == nodoAux->pair->key) return nodoAux;
                                              ^~~~~~~
treemap.c:91:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return nodoAux;
            ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9a50440
ju., 21 de abr. de 2022 18:15:39: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:91:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return nodoAux;
            ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4d4ac37
ju., 21 de abr. de 2022 18:15:58: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
066f006
vi., 22 de abr. de 2022 13:20:31: 
 treemap.c | 21 ++++++++++-----------
 1 file changed, 10 insertions(+), 11 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9283bcc
vi., 22 de abr. de 2022 13:21:05: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|7
total_score: 5/70
15dc7cf
vi., 22 de abr. de 2022 13:22:00: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
80e2acc
vi., 22 de abr. de 2022 13:22:51: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9302c67
vi., 22 de abr. de 2022 13:26:16: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ff36dc1
vi., 22 de abr. de 2022 13:27:23: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0587906
vi., 22 de abr. de 2022 13:34:13: 
 treemap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:55:15: error: variable 'padre' set but not used [-Werror=unused-but-set-variable]
     TreeNode *padre = NULL;
               ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e0bc8bb
vi., 22 de abr. de 2022 13:35:11: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d89e70e
vi., 22 de abr. de 2022 13:36:10: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:98:62: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
             if(is_equal(tree,nodoAux->pair->key,key)) return nodoAux;
                                                              ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2da59c8
vi., 22 de abr. de 2022 13:36:25: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b2dc7e7
vi., 22 de abr. de 2022 13:37:06: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:109:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
1674924
vi., 22 de abr. de 2022 13:37:25: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
821109b
vi., 22 de abr. de 2022 13:38:03: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:55:15: error: variable 'padre' set but not used [-Werror=unused-but-set-variable]
     TreeNode *padre = NULL;
               ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4484c1f
